@@ -56,6 +56,7 @@ Version 1.5
  - Pull Request #879 - Fixed setting Thermostat Clock from gizmocuz (Justin)
  - Pull Request #888 - Added Fibaro FGMS001 2016 USA version from Clancey (Nechry)
  - Issue #895 - There are now 2 danfoss room sensor definitions with type="0003" id="8010" (Nechry)
+ - Pull Request #901 - Jeedom Config Updates (Justin)
 
 
 Version 1.4
